<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/item_border"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/nazivET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Naziv biljke"
                android:layout_marginBottom="8dp" />

            <EditText
                android:id="@+id/porodicaET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Porodica biljke"
                android:layout_marginBottom="8dp" />

            <EditText
                android:id="@+id/medicinskoUpozorenjeET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Medicinsko upozorenje"
                android:layout_marginBottom="8dp" />

            <EditText
                android:id="@+id/jeloET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Naziv jela"
                android:layout_marginBottom="8dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/medicinskaKoristLVET"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Medicinska korist"
                    android:enabled="false"/>

                <ListView
                    android:id="@+id/medicinskaKoristLV"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:choiceMode="multipleChoice"
                    android:listSelector="@android:color/holo_blue_light"
                    android:nestedScrollingEnabled="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/klimatskiTipLVET"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Klimatski tip"
                    android:enabled="false"/>

                <ListView
                    android:id="@+id/klimatskiTipLV"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:choiceMode="multipleChoice"
                    android:listSelector="@android:color/holo_green_light"
                    android:nestedScrollingEnabled="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/zemljisniTipLVET"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Zemljisni tip"
                    android:enabled="false"/>

                <ListView
                    android:id="@+id/zemljisniTipLV"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:choiceMode="multipleChoice"
                    android:listSelector="@android:color/holo_red_light"
                    android:nestedScrollingEnabled="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/profilOkusaLVET"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Profil okusa"
                    android:enabled="false"/>

                <ListView
                    android:id="@+id/profilOkusaLV"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:choiceMode="singleChoice"
                    android:nestedScrollingEnabled="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Jela" />

                <ListView
                    android:id="@+id/jelaLV"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:nestedScrollingEnabled="true" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/dodajJeloBtn"
                android:background="@drawable/button_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Dodaj jelo"
                android:layout_marginBottom="8dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/dodajBiljkuBtn"
                android:background="@drawable/button_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Dodaj biljku"
                android:layout_marginBottom="8dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/uslikajBiljkuBtn"
                android:background="@drawable/button_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Uslikaj biljku"
                android:layout_marginBottom="8dp"/>

            <ImageView
                android:id="@+id/slikaIV"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@android:drawable/ic_menu_camera" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>